umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@gaussview_bse-C.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule_lenient
category: extended_molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: Invalid counts line at line 3
molecule_lenient:
  success: false
  error:
    error_type: InvalidCountsLine
    message: Invalid counts line at line 3
extended_molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: Invalid counts line at line 3
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C142H36N2S2Se
    atom_count: 183
    bond_count: 236
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
